- Bugfix SQL bug syntax error at or near ")" in StudentSummary.php
- verify END_DATE > START_DATE in MarkingPeriods.php
- Replace smooth scrolling after page load with direct scroll in warehouse.js
- Use json_encode to escape JS vars, programwide
- Bugfix JS syntax error for autos/edits/exports pull down fields in StudentFieldBreakdown.php & StudentBreakdown.php

Upgrade from 2.6.x
------------------
- Flush the functions/ & ProgramFunctions/ folders
- Delete the modules/Moodle/ & modules/Reports/ folders
- Extract the 2.7 files
- Execute the SQL commands, see https://gist.github.com/francoisjacquet/eee136a8431b704646dc
- You can safely remove the following variables from the config.inc.php file (see new config.inc.sample.php file for comparison):
	- $RosarioAdmins
	- $CurrencySymbol
	- $RosarioModules
	- MOODLE_INTEGRATOR
- (Re)activate the Moodle integrator via: School Setup > School Configuration > Plugins
- Set the Currency Symbol ($) via: School Setup > School Configuration
- Note: all the modules coming with RosarioSIS will be activated
- Activate/deactivate modules via: School Setup > School Configuration > Modules
- Note2: if you have custom modules, reactivate them:
	- Please rename first the install.sql file in your module directory (if any). (This will prevent automatic installation when reactivated.)


Changes in 2.6.6
----------------
- Fix PHP notices undefined index in index.php
- Display error if no quarters in Side.php & GetMP.php
- Force login vars to POST in index.php
- Bugfix SQL error column "subject_id" specified more than once in Courses.php
- Bugfix illegal offset when adding user/student in new school in Other_info.inc.php
- Bugfix Student enrollment saved for new students when error in Student.php & Enrollment.inc.php
- Move fix SQL bug FIRST_NAME, LAST_NAME is null up in User.php & Student.php
- No 'N/A' for Grade Level select input in General_Info.inc.php
- Fix Attendance Summary calendar gen for Full Year over 2 years


Changes in 2.6.5